migrate to java 7